[gd_scene load_steps=2 format=2]

[ext_resource path="res://Master/Master.gd" type="Script" id=1]

[node name="Master" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -196.0
margin_right = 130.0
margin_bottom = 196.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New" type="Button" parent="Panel/VBoxContainer"]
margin_right = 260.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 128 )
text = "New"

[node name="GridContainer" type="GridContainer" parent="Panel/VBoxContainer"]
margin_top = 132.0
margin_right = 260.0
margin_bottom = 392.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Import" type="Button" parent="Panel/VBoxContainer/GridContainer"]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
text = "Import"

[node name="Export" type="Button" parent="Panel/VBoxContainer/GridContainer"]
margin_left = 132.0
margin_right = 260.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
text = "Export"

[node name="Resource" type="Button" parent="Panel/VBoxContainer/GridContainer"]
margin_top = 132.0
margin_right = 128.0
margin_bottom = 260.0
rect_min_size = Vector2( 128, 128 )
text = "Resource Editor"

[node name="Map" type="Button" parent="Panel/VBoxContainer/GridContainer"]
margin_left = 132.0
margin_top = 132.0
margin_right = 260.0
margin_bottom = 260.0
rect_min_size = Vector2( 128, 128 )
text = "Map Editor"

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -192.0
margin_top = 24.0
margin_right = 192.0
margin_bottom = 62.0
text = "No File Loaded"
align = 1
valign = 1

[node name="Export" type="FileDialog" parent="."]
margin_left = 376.0
margin_top = 184.0
margin_right = 728.0
margin_bottom = 480.0
access = 2
current_dir = "C:/Users/sam/Documents/Godot/Projects/SpaceGameEditor"
current_path = "C:/Users/sam/Documents/Godot/Projects/SpaceGameEditor/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Import" type="FileDialog" parent="."]
margin_left = 376.0
margin_top = 184.0
margin_right = 728.0
margin_bottom = 480.0
window_title = "Open a File"
mode = 0
access = 2
current_dir = "C:/Users/sam/Documents/Godot/Projects/SpaceGameEditor"
current_path = "C:/Users/sam/Documents/Godot/Projects/SpaceGameEditor/"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/Import" to="." method="_on_Import_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/Export" to="." method="_on_Export_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/Resource" to="." method="_on_Resource_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/GridContainer/Map" to="." method="_on_Map_pressed"]
[connection signal="confirmed" from="Export" to="." method="_on_Export_confirmed"]
[connection signal="confirmed" from="Import" to="." method="_on_Import_confirmed"]
